@@ -1,5 +1,10 @@
 2007-09-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-vfs-utils.[ch]:
+        Add gnome_vfs_file_info_to_gio
+
+2007-09-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-metafile-monitor.c:
         * libnautilus-private/nautilus-directory-private.h:
         * libnautilus-private/nautilus-directory.c:
